Candidate for CRAN 0.9.4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 
-export("AddLakes", "AddRivers", "BfSStamp",  "CombinePolg", "CombineKant",
+export("AddLakes", "AddRivers", "AddWaters","BfSStamp",  "CombinePolg", "CombineKant",
        "CombinePolygons", "Neighbours", "PlotBezk","PlotCH","PlotGreg",
        "PlotKant", "PlotBezk", "PlotMSRe","PlotMapDot","PlotPolg",
        "SwissLocator", "RequireMap", "LoadMap", "tkart")
@@ -9,7 +9,7 @@ importFrom("grDevices", "xy.coords")
 importFrom("graphics", "layout", "legend", "locator", "par", "plot", "text",
            "title", "strheight", "strwidth")
 importFrom("utils", "packageVersion", "globalVariables","read.csv", "tail")
-importFrom("DescTools", "Coalesce", "BlankIfNA", "Recycle", "Mar", "Pal", "SetNames", "InDots")
+importFrom("DescTools", "Coalesce", "BlankIfNA", "Recycle", "Mar", "Pal", "SetNames", "InDots", "ColToOpaque", "SetAlpha")
 importFrom("spdep", "nb2listw", "poly2nb")
 importFrom("maptools", "unionSpatialPolygons")
 importFrom("rlang", "env_poke")
